--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,8 @@ on:
 
 permissions:
   contents: read
+  actions: read
+  checks: write
 
 jobs:
   build:
@@ -26,3 +28,11 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
       - name: Run Gradle Tests
         run: ./gradlew test
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: JUnit Tests
+          path: build/test-results/test/*.xml
+          reporter: java-junit
+          fail-on-error: true
