--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,11 @@ jobs:
           distribution: 'zulu'
       - name: Setup gradle
         uses: gradle/actions/setup-gradle@v3
+      - name: Extract tag
+        id: extract_tag
+        run: echo "::set-output name=tag::${GITHUB_REF/refs\/tags\/v/}"
       - name: Run Gradle Build
-        run: ./gradlew packageDistributionForCurrentOS
+        run: ./gradlew packageDistributionForCurrentOS -Pversion=${{ steps.extract_tag.outputs.tag }}
       #      - name: Archive Artifacts
       #        uses: actions/upload-artifact@v4
       #        with:
