--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,11 +22,14 @@ jobs:
           distribution: 'zulu'
       - name: Setup gradle
         uses: gradle/actions/setup-gradle@v3
-      - name: Extract tag
-        id: extract_tag
-        run: echo "::set-output name=tag::${GITHUB_REF/refs\/tags\/v/}"
+      - name: Extract tag on Unix
+        if: runner.os != 'Windows'
+        run: echo "tag=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+      - name: Extract tag on Windows
+        if: runner.os == 'Windows'
+        run: echo tag=${GITHUB_REF/refs/tags/v/} | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8
       - name: Run Gradle Build
-        run: ./gradlew packageDistributionForCurrentOS -Pversion=${{ steps.extract_tag.outputs.tag }}
+        run: ./gradlew packageDistributionForCurrentOS -Pversion=${{ env.tag }}
       #      - name: Archive Artifacts
       #        uses: actions/upload-artifact@v4
       #        with:
