--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,20 +25,14 @@ jobs:
       - name: Extract tag on Unix
         if: runner.os != 'Windows'
         run: echo "tag=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+      # Extract Tag for Windows
       - name: Extract tag on Windows
         if: runner.os == 'Windows'
-        run: echo tag=${GITHUB_REF/refs/tags/v/} | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8
+        run: |
+          $tag = $env:GITHUB_REF -replace 'refs/tags/v', ''
+          echo "tag=$tag" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8
       - name: Run Gradle Build
-        run: ./gradlew packageDistributionForCurrentOS -Pversion=${{ env.tag }}
-      #      - name: Archive Artifacts
-      #        uses: actions/upload-artifact@v4
-      #        with:
-      #          name: distributable-${{ matrix.os }}
-      #          if-no-files-found: ignore
-      #          path: |
-      #            build/**/*.deb
-      #            build/**/*.msi
-      #            build/compose/jars/*.jar
+        run: ./gradlew packageDistributionForCurrentOS -Pversion="${{ env.tag }}"
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
